--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1> 
-        Welcome to our Bi Codes project
+    <h1  class="title"> Bi Codes project
     </h1>
+    <p class="text">Welcome to Bi codes platform <br> 
+    For all your git and git hub challenges.
+    </p>
     <img src="laptop.jpg" alt="img" class="banner">
 </body>
 </html>
