--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         Welcome to our Bi Codes project
     </h1>
     <img src="laptop.jpg" alt="img" class="banner">
+    <button class="button">Subscribe </button>
 </body>
 </html>
