add alternative pages

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     For all your git and git hub challenges.
     </p>
     <img src="laptop.jpg" alt="img" class="banner">
-    <button class="button">Subscribe </button>
+    <a href="landing.html">
+        <button class="button index-btn">Subscribe </button>
+    </a>
 </body>
 </html>
